@@ -6,6 +6,7 @@ unreleased
 - support for A2DP Sink with LDAC codec if decoder is available
 - use rst2man (docutils) instead of pandoc to build man-pages
 - bluealsa-cli: utility for using D-Bus API from command line
+- bash completion script for installed applications
 
 bluez-alsa v3.0.0 (2020-09-15)
 ==============================
